--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port = 8090
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/springproject
+spring.datasource.username=mcuser
+spring.datasource.password=mcpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Spring MVC
+# View 파일 관련
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
+# 파일 Upload/download
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.location=c:/Temp/spring
