--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 		    <groupId>org.springframework.session</groupId>
 		    <artifactId>spring-session-core</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
