--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.location=c:/Temp/spring
+
+#static경로
+spring.mvc.static-path-pattern: /static/**
